# neonforge-server

./: .dockerignore  .env  .gitignore  .gitmodules  __init__.py  backend.Dockerfile  config.py  config.txt  docker-compose.yml  frontend.Dockerfile  nginx.conf  requirements.txt  reset_all.sh  restart_apk.sh  restart_apk_gui.sh
MainServer/: __init__.py  boot.sh  config.py  cors_helpers.py  dev.py  entrypoint.sh  gunicorn.conf.py  neonforge.py  nginx.conf.template  pyproject.toml  requirements.txt  run-dev.ps1  setup.py
adb_commands/: install_apk.sh  pico_settings.sh
metadata/: H1_file-1755641444114-436985836.zip.json  H1_file-1755725937556-31782842.zip.json
